# projeto-smartnutri24

./: .env  README.md  SmartNutri24Bot.session  SmartNutri24Bot.session-journal  app.py  chat_history.db  database.py  food_image_analyser.py  nutritionist.py  pyproject.toml  scheduler.py  smartnutri.db  telegram.py
